Fix no scroll on mobile, tap action, dropdown...
- [x] It was possible to scroll in some cards when the large-2-row layout was set in combination with a dropdown sub-button, the previous fix was not working. #1513
- [x] Select cards/sub-buttons are now opening in the correct direction, just like before.
- [x] Select cards/sub-buttons with some attribute modes were not updated if changed outside, this is now fixed! #1536
- [x] Fixed the tap action, double tap action and hold action for good!
- [x] On mobile, scrolling on some cards was preventing scrolling on the page. #1535
- [x] Fixed auto-scrolling to top when opening a pop-up on mobile #1495

--- a/src/components/dropdown/styles.css
+++ b/src/components/dropdown/styles.css
@@ -32,7 +32,7 @@ ha-select {
     position: absolute !important;
     pointer-events: none;
     right: var(--right-value, 46px);
-    top: -28px;
+    height: 0px !important;
 }
 
 .mdc-menu, mwc-list, .mdc-list-item {
@@ -50,6 +50,8 @@ ha-select {
 .mdc-select__anchor {
     width: 100%;
     pointer-events: none;
+    top: -14px !important;
+    height: 28px !important;
 }
 
 .bubble-dropdown-container {
